# ScrollNice

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  MIGRATION_STATUS_2026-05-08.md  README  README.md  README_vn.md  ScrollNiceDoc  config.json  implementation_plan.md  scroll_nice_design_document_v_1.md
.cursor/rules/: scrollnice-slint-migration.mdc
docs/: changelog.html  index.html
docs/css/: style.css
docs/docs/: index.html  install.html  modes.html  privacy.html  quickstart.html  settings.html  troubleshoot.html
docs/js/: docs-i18n.js  i18n.js  main.js
docs/superpowers/specs/: 2026-05-08-slint-ui-migration-design.md
extension/FeelClick/: README.md  README_JA.md  README_VI.md  content.css  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
locales/: en.json  vi.json
presets/: chrome.json  edge.json  firefox.json  vscode.json
src/: lib.rs  main.cpp  main.rs
src/core/: Config.cpp  Config.h  ScrollEngine.cpp  ScrollEngine.h  StateMachine.cpp  StateMachine.h  Zone.cpp  Zone.h  config.rs  mod.rs  scroll_engine.rs  state_machine.rs  zone.rs
src/i18n/: mod.rs
src/platform/win/: WinHotkeys.cpp  WinHotkeys.h  WinInputInjector.cpp  WinInputInjector.h  WinMainWindow.cpp  WinMainWindow.h  WinMouseHook.cpp  WinMouseHook.h  WinOverlay.cpp  WinOverlay.h  WinSettings.cpp  WinSettings.h  WinTray.cpp  WinTray.h
src/platform/win32/: hotkeys.rs  input_injector.rs  mod.rs  mouse_hook.rs  tray.rs  window.rs
src/themes/: mod.rs
src/ui/: bridge.rs
ui/: main_window.slint
website/: changelog.html  index.html
website/docs/: modes.html  privacy.html  quickstart.html  troubleshoot.html
website/js/: main.js
